--- a/index.css
+++ b/index.css
@@ -1,10 +1,15 @@
 :root {
-  font-size: large;
+  font-size: 28px;
+  --left-size: 30%;
 }
 
 body {
   display: flex;
   align-items: center;
+  width: 100vw;
+  height: 100vh;
+  padding: 0px;
+  margin: 0px;
 }
 
 /* LEFT */
@@ -12,9 +17,12 @@ body {
 .left-container {
   display: flex;
   justify-content: center;
+  align-items: center;
   background-image: url("resources/spenser-sembrat-UvZMA8H2Olk-unsplash.jpg");
   background-position: center;
   background-size: cover;
+  width: 30%;
+  height: 100%;
 }
 
 .big-text {
@@ -28,6 +36,11 @@ body {
 .right-container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  width: calc(100% - var(--left-size));
+  height: 100%;
+  padding: 8px;
+  background-color: rgb(208, 205, 205);
 }
 
 p {
@@ -37,13 +50,25 @@ p {
 
 form {
   display: flex;
-  flex-flow: row wrap;
+  flex-direction: column;
   margin: 8px;
+  background-color: white;
+  align-items: center;
 }
 
 form label {
   padding: 8px;
   display: flex;
   flex-direction: column;
-  font-size: 0.9rem;
+  font-size: 0.6rem;
+}
+
+form h3 {
+  margin-left: 8px;
+}
+
+.form-group {
+  display: flex;
+  align-items: center;
+  margin: 8px;
 }
