--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 :root {
   font-size: 28px;
-  --left-size: 30%;
+  --left-size: 40%;
   --base-color-bg: rgb(48, 52, 70);
   --surface1-bg: rgb(81, 87, 109);
   --text-col: rgb(198, 208, 245);
@@ -26,7 +26,7 @@ body {
   background-image: url("resources/spenser-sembrat-UvZMA8H2Olk-unsplash.jpg");
   background-position: center;
   background-size: cover;
-  width: 30%;
+  width: var(--left-size);
   height: 100%;
 }
 
@@ -35,28 +35,32 @@ body {
   color: white;
   background-color: rgba(0, 0, 0, 0.75);
   padding: 8px;
+  width: 100%;
+  text-align: center;
+  margin-bottom: 50vh;
 }
 
 /* RIGHT */
 .right-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   width: calc(100% - var(--left-size));
   height: 100%;
-  padding: 8px;
 }
 
-p {
+.right-text {
   font-weight: bold;
   font-family: Georgia, "Times New Roman", Times, serif;
+  margin-top: 144px;
+  margin-bottom: 36px;
+  padding: 16px;
 }
 
 form {
   display: flex;
   flex-direction: column;
-  margin: 8px;
-  align-items: center;
+  padding: 16px;
+  margin: 0;
   background-color: var(--surface1-bg);
 }
 
@@ -64,7 +68,14 @@ form label {
   padding: 8px;
   display: flex;
   flex-direction: column;
-  font-size: 0.6rem;
+  font-size: 0.7rem;
+}
+
+form input {
+  border: 2px solid #e4e4e6;
+  border-radius: 5px;
+  height: 35px;
+  width: 350px;
 }
 
 form h3 {
