--- a/index.css
+++ b/index.css
@@ -22,8 +22,8 @@
 body {
   display: flex;
   align-items: center;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   padding: 0px;
   margin: 0px;
   background-color: var(--base-color-bg);
@@ -40,7 +40,7 @@ body {
   background-position: center;
   background-size: cover;
   width: var(--left-size);
-  height: 100%;
+  height: 100vh;
 }
 
 .big-text {
@@ -65,13 +65,12 @@ body {
   align-self: flex-end;
   background-color: var(--button-col);
   padding: 8px;
-  margin: 8px;
   border-radius: 8px;
 }
 .right-text {
   font-weight: bold;
   font-family: Georgia, "Times New Roman", Times, serif;
-  margin-top: 144px;
+  margin-top: 36px;
   margin-bottom: 36px;
   margin-left: 32px;
   padding: 16px;
